--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.15.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.0.4",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
